feat: implement Swagger UI integration and fix i18n issues
- Add interactive API documentation with Swagger UI
- Create OpenAPI 3.0 specification for Bamboo microservices
- Fix i18n configuration for Spanish translations
- Remove ProductId and Comentaries fields from order JSON
- Fix JSX expressions in markdown files (orderId, warehouseId, token)
- Update navbar and sidebar translations
- Add API page with swagger-ui-react integration
- Configure proper routing for both English and Spanish versions

--- a/i18n/es/code.json
+++ b/i18n/es/code.json
@@ -325,5 +325,9 @@
   "theme.tags.tagsPageTitle": {
     "message": "Etiquetas",
     "description": "The title of the tag list page"
+  },
+  "homepage.getStarted": {
+    "message": "Documentación",
+    "description": "Homepage get started button"
   }
 }
