--- a/i18n/es/docusaurus-plugin-content-docs/current.json
+++ b/i18n/es/docusaurus-plugin-content-docs/current.json
@@ -1,18 +1,14 @@
 {
   "version.label": {
-    "message": "Next",
+    "message": "Actual",
     "description": "The label for version current"
   },
-  "sidebar.tutorialSidebar.category.Tutorial - Basics": {
-    "message": "Tutorial - Basics",
-    "description": "The label for category 'Tutorial - Basics' in sidebar 'tutorialSidebar'"
+  "sidebar.tutorialSidebar.category.POS Sales Microservice": {
+    "message": "Microservicio de Ventas POS",
+    "description": "The label for category 'POS Sales Microservice' in sidebar 'tutorialSidebar'"
   },
-  "sidebar.tutorialSidebar.category.Tutorial - Basics.link.generated-index.description": {
-    "message": "5 minutes to learn the most important Docusaurus concepts.",
-    "description": "The generated-index page description for category 'Tutorial - Basics' in sidebar 'tutorialSidebar'"
-  },
-  "sidebar.tutorialSidebar.category.Tutorial - Extras": {
-    "message": "Tutorial - Extras",
-    "description": "The label for category 'Tutorial - Extras' in sidebar 'tutorialSidebar'"
+  "sidebar.tutorialSidebar.category.E-commerce Sales Microservice": {
+    "message": "Microservicio de Ventas E-commerce",
+    "description": "The label for category 'E-commerce Sales Microservice' in sidebar 'tutorialSidebar'"
   }
 }
