--- a/i18n/es/docusaurus-theme-classic/navbar.json
+++ b/i18n/es/docusaurus-theme-classic/navbar.json
@@ -1,14 +1,14 @@
 {
   "title": {
-    "message": "My Site",
+    "message": "Bamboo Docs",
     "description": "The title in the navbar"
   },
   "logo.alt": {
-    "message": "My Site Logo",
+    "message": "Logo de Bamboo Docs",
     "description": "The alt text of navbar logo"
   },
   "item.label.Tutorial": {
-    "message": "Tutorial",
+    "message": "Documentation",
     "description": "Navbar item with label Tutorial"
   },
   "item.label.Blog": {
